k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-demo-svc  #A unique name for the service. This is how you will refer to it when managing it with kubectl
spec:
  selector:
    app: release-demo #This selector matches the pods that have the label app: release-demo, which we defined in the deployment. This tells the service which pods to route traffic to
  ports:
  - port: 80 #The port that the service will listen on. This is the port you will use to access your application from outside the cluster
    targetPort: 3000 #The port on the pods that the service will forward traffic to. This should match the containerPort defined in the deployment
  type: ClusterIP #The type of service. ClusterIP means the service is only accessible within the cluster. For external access, you could use NodePort or LoadBalancer depending on your environment
